gh-pages deployment:1

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://github.com/Dio-ni/github.io/kaffypay",
   "name": "alaqan-landing",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -14,6 +17,7 @@
     "aos": "^2.3.4",
     "flickity": "^2.3.0",
     "framer-motion": "^11.11.9",
+    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flickity-component": "^4.0.7",
