FIX: homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Dio-ni/github.io/kaffypay",
+  "homepage": "https://github.com/Dio-ni.github.io/kaffypay",
   "name": "alaqan-landing",
   "private": true,
   "version": "0.0.0",
