--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "homepage": "https://dio-ni.github.io/kaffypay",
   "name": "alaqan-landing",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -20,6 +17,7 @@
     "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-faq-component": "^1.3.4",
     "react-flickity-component": "^4.0.7",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
