--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
+    "react-swipeable": "^7.0.1",
     "react-typing-effect": "^2.0.5",
     "slick-carousel": "^1.8.1"
   },
