--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "alaqan-landing": "file:",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "flickity": "^2.3.0",
     "framer-motion": "^11.11.9",
     "gh-pages": "^6.2.0",
@@ -19,10 +20,12 @@
     "react-dom": "^18.3.1",
     "react-faq-component": "^1.3.4",
     "react-flickity-component": "^4.0.7",
+    "react-ga4": "^2.1.0",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
